# postocr-3stages

./: .gitignore  README.md  pyproject.toml  tox.ini
notebooks/: 40-retrain-seq2seq.ipynb  Quickstart.ipynb  exp-to-launch.ipynb
src/postocr_3stages/: NMT_corrector.py  controller.py  error_detector.py  icdar_utils.py  pipeline.py  utils.py
