[tool.poetry]
name = "postocr-3stages"
version = "0.1.0"
description = "Post-OCR correction in 3 stages."
authors = ["EPITA Research Lab <contact@lre.epita.fr>"]
license = "GPL"
readme = "README.md"
packages = [{ include = "postocr-3stages", from = "src" }]
include = [{ path = "tests", format = "sdist" }]
repository = "https://github.com/soduco/postocr-3stages"


# Requirements
[tool.poetry.dependencies]
python = ">=3.8,<3.11"
matplotlib = "^3.5.3"
numpy = "^1.22.4"
pandas = "^1.3.5"
torch = "^1.13.0"
tqdm = "^4.64.1"
cer = "^1.2.0"
datasets = "^2.10.1"
evaluate = "^0.4.0"
scikit-learn = "^1.0.2"
jiwer = "^2.5.1"
OpenNMT-py = "^3.0.4"
pybind11 = "^2.10.3"
sentencepiece = "^0.1.97"
transformers = "^4.26.1"
accelerate = "^0.18.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.1"

[tool.poetry.group.typing.dependencies]
mypy = ">=1.0"


[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"



[tool.mypy]
files = "src, tests"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
    "tests/fixtures",
    "tests/utils/fixtures",
]


[tool.pytest.ini_options]
addopts = "-n auto"
testpaths = ["tests"]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]
